Include Corpus as a translation

--- a/QuranX.Web/QuranX.Web.csproj
+++ b/QuranX.Web/QuranX.Web.csproj
@@ -17897,6 +17897,7 @@
     <None Include="Properties\PublishProfiles\D_TEMP_PUBLISH.pubxml" />
     <None Include="Properties\PublishProfiles\PetePlayground - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\QuranX - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\quranx-Staging - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\quranx.hash-url-fixer.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
