--- a/QuranX.Web/Web.config
+++ b/QuranX.Web/Web.config
@@ -15,6 +15,8 @@
 		<customErrors mode="RemoteOnly" />
 		<httpRuntime targetFramework="4.7.1" relaxedUrlToFileSystemMapping="true" />
 		<httpModules>
+			<remove name="UrlRoutingModule-4.0" />
+			<add name="UrlRoutingModule-4.0" type="System.Web.Routing.UrlRoutingModule, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" preCondition="" />
 			<add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
 			<add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" />
 		</httpModules>
