--- a/QuranX.Web/Web.config
+++ b/QuranX.Web/Web.config
@@ -75,6 +75,8 @@
 			<add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
 			<remove name="TelemetryCorrelationHttpModule" />
 			<add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="managedHandler" />
+			<remove name="UrlRoutingModule-4.0" />
+			<add name="UrlRoutingModule-4.0" type="System.Web.Routing.UrlRoutingModule, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" preCondition="" />
 		</modules>
 		<validation validateIntegratedModeConfiguration="false" />
 	</system.webServer>
