--- a/QuranX.Web/Web.config
+++ b/QuranX.Web/Web.config
@@ -21,6 +21,18 @@
 			<add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" />
 		</httpModules>
 	</system.web>
+	<location path="Content/Images/ArabicWords">
+		<system.webServer>
+			<staticContent>
+				<clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="365.00:00:00" />
+			</staticContent>
+			<httpProtocol>
+				<customHeaders>
+					<add name="Cache-Control" value="public" />
+				</customHeaders>
+			</httpProtocol>
+		</system.webServer>
+	</location>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
