--- a/QuranX.Web/Web.config
+++ b/QuranX.Web/Web.config
@@ -17,10 +17,20 @@
 		<httpModules>
 			<remove name="UrlRoutingModule-4.0" />
 			<add name="UrlRoutingModule-4.0" type="System.Web.Routing.UrlRoutingModule, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" preCondition="" />
-			<add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
-			<add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" />
 		</httpModules>
 	</system.web>
+	<location path="Content/Images/ArabicWords">
+		<system.webServer>
+			<staticContent>
+				<clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="365.00:00:00" />
+			</staticContent>
+			<httpProtocol>
+				<customHeaders>
+					<add name="Cache-Control" value="public" />
+				</customHeaders>
+			</httpProtocol>
+		</system.webServer>
+	</location>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
@@ -71,10 +81,6 @@
 	</runtime>
 	<system.webServer>
 		<modules runAllManagedModulesForAllRequests="true">
-			<remove name="ApplicationInsightsWebTracking" />
-			<add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
-			<remove name="TelemetryCorrelationHttpModule" />
-			<add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="managedHandler" />
 			<remove name="UrlRoutingModule-4.0" />
 			<add name="UrlRoutingModule-4.0" type="System.Web.Routing.UrlRoutingModule, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" preCondition="" />
 		</modules>
