--- a/QuranX.DataMigration/packages.config
+++ b/QuranX.DataMigration/packages.config
@@ -2,12 +2,13 @@
 <packages>
   <package id="Lucene.Net" version="3.0.3" targetFramework="net471" />
   <package id="Lucene.Net.Contrib" version="3.0.3" targetFramework="net471" />
-  <package id="NLog" version="4.5.10" targetFramework="net471" />
-  <package id="SharpZipLib" version="0.86.0" targetFramework="net471" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net471" />
+  <package id="NLog" version="4.5.11" targetFramework="net471" />
+  <package id="SharpZipLib" version="1.0.0" targetFramework="net471" />
   <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net471" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net471" />
   <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net471" />
   <package id="System.Security.Permissions" version="4.5.0" targetFramework="net471" />
-  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net471" />
-  <package id="Unity" version="5.8.11" targetFramework="net471" />
+  <package id="System.Security.Principal.Windows" version="4.5.1" targetFramework="net471" />
+  <package id="Unity" version="5.8.13" targetFramework="net471" />
 </packages>
