Lane Lexicon importer

--- a/QuranX.DataMigration/QuranX.DataMigration.csproj
+++ b/QuranX.DataMigration/QuranX.DataMigration.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Migrators\CommentaryMigrator.cs" />
     <Compile Include="Migrators\CorpusMigrator.cs" />
     <Compile Include="Migrators\DataMigrator.cs" />
+    <Compile Include="Migrators\DictionariesMigrator.cs" />
     <Compile Include="Migrators\HadithMigrator.cs" />
     <Compile Include="Migrators\LanesLexiconMigrator.cs" />
     <Compile Include="Migrators\QuranMigrator.cs" />
