--- a/QuranX.Persistence/QuranX.Persistence.csproj
+++ b/QuranX.Persistence/QuranX.Persistence.csproj
@@ -122,6 +122,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArabicWordIndexer.cs" />
     <Compile Include="DocumentWeights.cs" />
     <Compile Include="Extensions\BooleanQueryExtensions.cs" />
     <Compile Include="Extensions\DocumentExtensions.cs" />
