--- a/QuranX.Persistence/QuranX.Persistence.csproj
+++ b/QuranX.Persistence/QuranX.Persistence.csproj
@@ -122,6 +122,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArabicWordIndexer.cs" />
     <Compile Include="DocumentWeights.cs" />
     <Compile Include="Extensions\BooleanQueryExtensions.cs" />
     <Compile Include="Extensions\DocumentExtensions.cs" />
@@ -131,6 +132,8 @@
     <Compile Include="LuceneSupport\QuranXLetterTokenizer.cs" />
     <Compile Include="Models\Commentary.cs" />
     <Compile Include="Models\Commentator.cs" />
+    <Compile Include="Models\Dictionary.cs" />
+    <Compile Include="Models\DictionaryEntry.cs" />
     <Compile Include="Models\Hadith.cs" />
     <Compile Include="Models\HadithCollection.cs" />
     <Compile Include="Models\HadithReference.cs" />
@@ -155,6 +158,10 @@
     <Compile Include="Services\Repositories\CommentatorRepository.cs" />
     <Compile Include="Services\Repositories\CommentatorWriteRepository.cs" />
     <Compile Include="Services\Consts.cs" />
+    <Compile Include="Services\Repositories\DictionaryEntryRepository.cs" />
+    <Compile Include="Services\Repositories\DictionaryEntryWriteRepository.cs" />
+    <Compile Include="Services\Repositories\DictionaryRepository.cs" />
+    <Compile Include="Services\Repositories\DictionaryWriteRepository.cs" />
     <Compile Include="Services\Repositories\HadithCollectionRepository.cs" />
     <Compile Include="Services\Repositories\HadithCollectionWriteRepository.cs" />
     <Compile Include="Services\Repositories\HadithRepository.cs" />
