--- a/QuranX.Web/QuranX.Web.csproj
+++ b/QuranX.Web/QuranX.Web.csproj
@@ -162,8 +162,8 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\UnityConfig.cs" />
-    <Compile Include="ArabicHelper.cs" />
     <Compile Include="Controllers\AboutController.cs" />
+    <Compile Include="Controllers\DictionaryEntryController.cs" />
     <Compile Include="Controllers\HadithIndexController.cs" />
     <Compile Include="Controllers\HelpController.cs" />
     <Compile Include="Controllers\RootAnalysisController.cs" />
@@ -193,6 +193,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Registration.cs" />
     <Compile Include="Factories\SearchResultWithLinkFactory.cs" />
+    <Compile Include="Views\DictionaryEntry\ViewModel.cs" />
     <Compile Include="Views\HadithIndex\HadithIndexHeaderViewModel.cs" />
     <Compile Include="Views\HadithIndex\HadithsViewModel.cs" />
     <Compile Include="Views\HadithIndex\BrowseHadithIndexViewModel.cs" />
@@ -17941,6 +17942,7 @@
       <BrowseToURL>~/About</BrowseToURL>
     </Content>
     <Content Include="Views\Help\Help.cshtml" />
+    <Content Include="Views\DictionaryEntry\DictionaryEntry.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
