--- a/QuranX.Web/QuranX.Web.csproj
+++ b/QuranX.Web/QuranX.Web.csproj
@@ -17866,7 +17866,6 @@
       <SubType>Designer</SubType>
     </Content>
     <None Include="Properties\PublishProfiles\D_TEMP_PUBLISH.pubxml" />
-    <None Include="Properties\PublishProfiles\quranx-Staging - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\quranx.hash-url-fixer.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
@@ -17942,7 +17941,9 @@
       <BrowseToURL>~/About</BrowseToURL>
     </Content>
     <Content Include="Views\Help\Help.cshtml" />
-    <Content Include="Views\DictionaryEntry\DictionaryEntry.cshtml" />
+    <Content Include="Views\DictionaryEntry\DictionaryEntry.cshtml">
+      <BrowseToURL>~/Dictionary/Lane/مهد</BrowseToURL>
+    </Content>
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
