--- a/QuranX.Web/Web.config
+++ b/QuranX.Web/Web.config
@@ -93,6 +93,9 @@
       <add name="UrlRoutingModule-4.0" type="System.Web.Routing.UrlRoutingModule, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" preCondition=""/>
     </modules>
     <validation validateIntegratedModeConfiguration="false"/>
+    <staticContent>
+      <mimeMap fileExtension=".webmanifest" mimeType="application/manifest+json" />
+    </staticContent>
   </system.webServer>
   <system.codedom>
     <compilers>
