--- a/src/QuranX.Web/QuranX.Web.csproj
+++ b/src/QuranX.Web/QuranX.Web.csproj
@@ -17900,6 +17900,7 @@
     <Content Include="Content\Images\HeaderRepeat.jpg" />
     <Content Include="Content\Images\QuranX.png" />
     <Content Include="Content\Images\QuranXSocialIcon.png" />
+    <Content Include="Content\Images\SubhanAllah.png" />
     <Content Include="favicon-16x16.png" />
     <Content Include="favicon-32x32.png" />
     <Content Include="favicon.ico" />
