--- a/src/QuranX.DocumentModel/QuranX.DocumentModel.csproj
+++ b/src/QuranX.DocumentModel/QuranX.DocumentModel.csproj
@@ -1,147 +1,30 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{32BD00B9-5689-45D5-BA1A-376EA8BE22EC}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>QuranX.DocumentModel</RootNamespace>
-    <AssemblyName>QuranX.DocumentModel</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <SccProjectName>
-    </SccProjectName>
-    <SccLocalPath>
-    </SccLocalPath>
-    <SccAuxPath>
-    </SccAuxPath>
-    <SccProvider>
-    </SccProvider>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>..\packages\NLog.4.5.10\lib\net45\NLog.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.IO.Compression" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.ServiceModel" />
-    <Reference Include="System.Transactions" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="ArabicAlphabet.cs" />
-    <Compile Include="ChapterAndVerse.cs" />
-    <Compile Include="CollectionAndHadith.cs" />
-    <Compile Include="Factories\LexiconDocumentFactory.cs" />
-    <Compile Include="HadithReference.cs" />
-    <Compile Include="HadithReferenceDefinition.cs" />
-    <Compile Include="HelperClasses\DisposableAction.cs" />
-    <Compile Include="HelperClasses\XmlWriterExtensions.cs" />
-    <Compile Include="Lexicon.cs" />
-    <Compile Include="LexiconDocument.cs" />
-    <Compile Include="LexiconDocumentVisitor.cs" />
-    <Compile Include="LexiconEntry.cs" />
-    <Compile Include="LexiconLetter.cs" />
-    <Compile Include="MultiPartReference.cs" />
-    <Compile Include="Factories\CorpusDocumentFactory.cs" />
-    <Compile Include="Factories\DocumentFactory.cs" />
-    <Compile Include="Factories\HadithCollectionFactory.cs" />
-    <Compile Include="Factories\HadithDocumentFactory.cs" />
-    <Compile Include="Factories\QuranDocumentFactory.cs" />
-    <Compile Include="Factories\RootWordsDocumentFactory.cs" />
-    <Compile Include="Factories\TafsirDocumentFactory.cs" />
-    <Compile Include="Factories\TafsirFactory.cs" />
-    <Compile Include="Chapter.cs" />
-    <Compile Include="CorpusDocument.cs" />
-    <Compile Include="CorpusVerse.cs" />
-    <Compile Include="CorpusVerseWord.cs" />
-    <Compile Include="CorpusVerseWordPart.cs" />
-    <Compile Include="Document.cs" />
-    <Compile Include="Hadith.cs" />
-    <Compile Include="HadithCollection.cs" />
-    <Compile Include="HadithDocument.cs" />
-    <Compile Include="HadithDocumentVisitor.cs" />
-    <Compile Include="QuranDocument.cs" />
-    <Compile Include="QuranDocumentVisitor.cs" />
-    <Compile Include="XmlData.cs" />
-    <Compile Include="StringHelper.cs" />
-    <Compile Include="Word.cs" />
-    <Compile Include="WordReference.cs" />
-    <Compile Include="WordsDocument.cs" />
-    <Compile Include="WordsDocumentVisitor.cs" />
-    <Compile Include="WordTypes.cs" />
-    <Compile Include="Tafsir.cs" />
-    <Compile Include="TafsirComment.cs" />
-    <Compile Include="TafsirDocument.cs" />
-    <Compile Include="TafsirDocumentVisitor.cs" />
-    <Compile Include="Verse.cs" />
-    <Compile Include="VerseTranslation.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="QuranStructure.cs" />
-    <Compile Include="XmlStreaming\HadithCollectionXmlWriter.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-    <None Include="Resources\QuranStructure.xml">
-      <SubType>Designer</SubType>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\quran-uthmani.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\QuranX.Shared\QuranX.Shared.csproj">
-      <Project>{cbffa4ca-a4b9-422e-bf7f-c99ad25bade2}</Project>
-      <Name>QuranX.Shared</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<RootNamespace>QuranX.DocumentModel</RootNamespace>
+		<AssemblyName>QuranX.DocumentModel</AssemblyName>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<!-- NuGet package references -->
+		<PackageReference Include="NLog" Version="5.2.0" />
+		<PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<!-- Project references -->
+		<ProjectReference Include="..\QuranX.Shared\QuranX.Shared.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<!-- Resource files -->
+		<None Include="Resources\QuranStructure.xml">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Include="Resources\quran-uthmani.xml">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+
 </Project>
