--- a/src/QuranX.Web/QuranX.Web.csproj
+++ b/src/QuranX.Web/QuranX.Web.csproj
@@ -5,6 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="OpenTelemetry" Version="1.9.0" />
+    <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.9.0" />
+    <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.9.0" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.9.0" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\QuranX.DocumentModel\QuranX.DocumentModel.csproj" />
     <ProjectReference Include="..\QuranX.Persistence\QuranX.Persistence.csproj" />
     <ProjectReference Include="..\QuranX.Shared\QuranX.Shared.csproj" />
