--- a/src/QuranX.Web/appsettings.Development.json
+++ b/src/QuranX.Web/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+   "Logging": {
+      "LogLevel": {
+         "Default": "Information",
+         "Microsoft.AspNetCore": "Warning"
+      }
+   },
+   "OTEL_SERVICE_NAME": "quran-x",
+   "OTEL_EXPORTER_OTLP_PROTOCOL": "http/protobuf",
+   "OTEL_EXPORTER_OTLP_ENDPOINT": "https://api.honeycomb.io",
+   "OTEL_EXPORTER_OTLP_HEADERS": "x-honeycomb-team=..."
 }
